atualização do site

--- a/galeriafotos.html
+++ b/galeriafotos.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap"
     rel="stylesheet"
     />
-    <title>Links Mayara</title>
+    <title>Links Kin Benevides</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -18,24 +18,89 @@
 
 <body>
     <h1>Galeria de Fotos</h1>
-
+<br>
     <p>Oferecemos uma ampla gama de serviços, desde tatuagens personalizadas até retoques e coberturas. Nossa abordagem centrada no cliente garante que cada sessão seja uma experiência única e satisfatória. Trabalhamos com cuidado e precisão, utilizando as mais recentes técnicas e materiais de alta qualidade para garantir não apenas uma tatuagem, mas uma obra de arte duradoura
         
     <p>Confira abaixo algumas artes de minha autoria.</p>
 
-    <img src="./assets/1.jpg" alt="">
-    <img src="./assets/2.jpg" alt="">
-    <img src="./assets/3.jpg" alt="">
-    <img src="./assets/4.jpg" alt="">
-    <img src="./assets/5.jpg" alt="">
-    <img src="./assets/6.jpg" alt="">
-    <img src="./assets/7.jpg" alt="">
-    <img src="./assets/8.jpg" alt="">
-    <img src="./assets/9.jpg" alt="">
-    <img src="./assets/10.jpg" alt="">
-    <img src="./assets/11.jpg" alt="">
-    <img src="./assets/12.jpg" alt="">
-    <img src="./assets/13.jpg" alt="">
+    <main>
+        <div class="gallery-container">
+            <a href="#david-bowie" class="gallery-items">
+                <img src="./assets/1.jpg" alt="David Bowie Tattoo">
+            </a>
+            <a href="img/2.jpg" class="gallery-items">
+                <img src="./assets/2.jpg" alt="Zé Ramalho Tattoo">
+            </a>
+            <a href="img/3.jpg" class="gallery-items">
+                <img src="./assets/3.jpg" alt="Águia Tattoo">
+            </a>
+            <a href="img/4.jpg" class="gallery-items">
+                <img src="./assets/4.jpg" alt="Tattoo 666">
+            </a>
+            <a href="img/5.png" class="gallery-items">
+                <img src="./assets/5.jpg" alt="Mão Leão">
+            </a>
+            <a href="img/6.jpg" class="gallery-items">
+                <img src="./assets/6.jpg" alt="coruja tattoo">
+            </a>
+            <a href="img/7.jpg" class="gallery-items">
+                <img src="/assets/7.jpg" alt="Pássaro Tattoo">
+            </a>
+            <a href="img/8.jpg" class="gallery-items">
+                <img src="/assets/8.jpg" alt="Braço fechado Leão">
+            </a>
+            <a href="img/9.jpg" class="gallery-items">
+                <img src="/assets/9.jpg" alt="Braço guerreiro tattoo">
+            </a>
+            <a href="img/10.jpg" class="gallery-items">
+                <img src="/assets/10.jpg" alt="Abóbora Tattoo">
+            </a>
+            <a href="img/14.png" class="gallery-items">
+                <img src="/assets/14.png" alt="Ruivo">
+            </a>
+            <a href="img/12.jpg" class="gallery-items">
+                <img src="/assets/12.jpg" alt="Sally">
+            </a>
+            <a href="img/13.jpg" class="gallery-items">
+                <img src="/assets/13.jpg" alt="Jesus Tattoo">
+            </a>
+            <a href="img/15.jpg" class="gallery-items">
+                <img src="/assets/15.jpg" alt="Sven">
+            </a>
+            <a href="img/16.jpg" class="gallery-items">
+                <img src="/assets/16.jpg" alt="Eddie Iron Maiden">
+            </a>
+            <a href="img/17.jpg" class="gallery-items">
+                <img src="/assets/17.jpg" alt="Urso Tattoo">
+            </a>
+            <a href="img/20.jpg" class="gallery-items">
+                <img src="/assets/20.jpg" alt="Gato tattoo">
+            </a>
+            <a href="img/21.jpg" class="gallery-items">
+                <img src="/assets/21.jpg" alt="Gandalf Tattoo">
+            </a>
+            <a href="img/18.jpg" class="gallery-items">
+                <img src="/assets/18.jpg" alt="Bode Tattoo">
+            </a>
+            <a href="img/19.jpg" class="gallery-items">
+            <img src="/assets/19.jpg" alt="Realismo Senhora">
+            </a>
+            <a href="img/22.jpg" class="gallery-items">
+                <img src="/assets/22.jpg" alt="Coringa tattoo">
+                </a>
+            <a href="img/23.jpg" class="gallery-items">
+                <img src="/assets/23.jpg" alt="Zé do Caixão tattoo">
+            </a>
+            <a href="img/24.jpg" class="gallery-items">
+                <img src="/assets/24.jpg" alt="Realismo criança tattoo">
+            </a>
+            <a href="img/25.jpg" class="gallery-items">
+                <img src="/assets/25.jpg" alt="Legião Urbana tattoo">
+                </a>
+        </div>        
+    </main>
+
+
 
 </body>
 </html>
