--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </li>
 
     <li> 
-        <a href="#">Galeria de Fotos</a>
+        <a href="galeriafotos.html">Galeria de Fotos</a>
     </li>
     </ul>
 
