alteracões - retirada de botão que mudava o dark and light

--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content=" IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <title>Kin Benevides Tattoo</title>
-=======
-    <title>Kin Benevides</title>
->>>>>>> refs/remotes/origin/main
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,19 +21,13 @@
     <p>@kinbenevidestattoo</p>
     </div>      
 
-    <div id="switch" onclick="toggleMode()">
-        <button> 
-        </button>
-        <span></span>
-    </div>
-
     <ul>
         <li> 
         <a href="https://wa.me/message/BECOB4LRL7DVP1">Agende sua Tattoo - WhatsApp</a> 
     </li>
         
         <li> 
-        <a href="https://maps.app.goo.gl/9FqmHDAwnaEiFFao6">Pérola Negra Tattoo Studio</a>
+        <a href="https://maps.app.goo.gl/HCxPgdMigmLeLbwP6">Localização</a>
         </li>
 
         <li> 
